two way synchronization
